mediatype cleanup, added pyjwt

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ python_version = "3.6"
 
 mongoengine = "*"
 "r2dto" = "*"
-"Jinja2" = "*"
-PyJWT = "*"
+"jinja2" = "*"
+pyjwt = "*"
 "boto3" = "*"
+falcon = "*"
