Changed session timeout unit to seconds

--- a/blog/settings.yml
+++ b/blog/settings.yml
@@ -1,8 +1,8 @@
 ---
 login:
   max_failed_login: 5
-  failed_login_timeout_seconds: 300
-  max_session_time_hours: 12
+  failed_login_timeout: 300
+  max_session_time: 43200
 rules:
   user:
     username_min_char: 3
