--- a/blog/settings.yml
+++ b/blog/settings.yml
@@ -5,6 +5,8 @@ login:
 post:
   view_time_delay: 3600
   search_time_delay: 15
+user:
+  require_email_verification: true
 rules:
   comment:
     content_max_char: 124
