--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,20 @@
 version: '2.1'
 services:
-  db:
+  mongo:
     image: mongo:3.6
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 30s
-      timeout: 30s
-      retries: 3
-  resource:
-    build: ./server
-    links:
-      - db
-    ports:
-      - "3300:3300"
     environment:
-      - "DB_HOST=${DOCKER_HOST_IP}"
-      - "BOOTSTRAP=${BOOTSTRAP}"
-    depends_on:
-      db:
-        condition: service_healthy
-  web:
-    build: ./client
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    volumes:
+      - ./data/db:/data/db
+    command: mongod --smallfiles --logpath=/dev/null # --quiet
+  blog:
+    build: .
+    links:
+      - mongo
     ports:
-- "8080:8080"
+      - "8000:8000"
+    environment:
+      - "BLOG_DB_HOST=mongodb://mongo:27017/py-blog"
+    depends_on:
+      - mongo
