--- a/blog/settings.yml
+++ b/blog/settings.yml
@@ -22,6 +22,6 @@ rules:
     username_max_char: 20
     username_min_char: 3
 user:
-  allow_avatar_upload: true
+  allow_avatar_capability: true
   allow_manual_registration: true
   require_email_verification: false
