Added user settings for s3 upload

--- a/blog/settings.yml
+++ b/blog/settings.yml
@@ -26,3 +26,4 @@ user:
   allow_avatar_capability: true
   allow_manual_registration: true
   require_email_verification: false
+  upload_avatar_s3: false
