Running fakes3 in background

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pipenv install --system
   - pipenv install --dev --system
 before_script:
-  - docker run -p 4569:4569 lphoward/fake-s3
+  - docker run -d -p 4569:4569 lphoward/fake-s3
 script:
   - BLOG_TEST=TRUE pytest --cov blog.core tests
   - if [ "$TRAVIS_BRANCH" == "master" ]; then codecov; fi
