Upgrading falcon-redis-cache

--- a/Pipfile
+++ b/Pipfile
@@ -25,4 +25,4 @@ python-magic = "*"
 falcon-multipart = "*"
 redis = "*"
 falcon-pagination-processor = "*"
-falcon-redis-cache = "*"
+falcon-redis-cache = "==0.0.2"
